workshops/inspect-basic/tilt-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inspect-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inspect-basic
  template:
    metadata:
      labels:
        app: inspect-basic
    spec:
      containers:
      - name: inspect-basic
        image: workshop-inspect-basic
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: inspect-basic
spec:
  selector:
    app: inspect-basic
  ports:
  - port: 50051
    targetPort: 50051
